# nasin-poki

./: README.md
data/: linku-common.ini  linku-common.toml  linku-rare-trimmed.toml  linku-rare.toml  punct.toml  wordlist-2026.txt
design/: .gitignore  categories-rare.txt  categories.txt  freq-analysis.py  html-gen.py  test.css  wordlist-2022.txt
fcitx5/: CMakeLists.txt  README.md  generator.py  nasin-poki-addon.conf  nasin-poki-dump.txt  nasin-poki.conf  nasin-poki.json  nasin-poki.txt  table_gen.cpp
fcitx5/table/: nasin-poki.txt
